--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1426,6 +1426,47 @@ section.lazy-placeholder:after {
 .cid-rPmaO1HTg8 H2 {
   color: #ff0000;
 }
+.cid-rPmaO1HTg8 .mbr-section-subtitle {
+  color: #0e50f4;
+}
+.cid-rUrqKkkykh {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  background-color: #ffffff;
+}
+.cid-rUrqKkkykh h4 {
+  font-weight: 500;
+  margin-bottom: 0;
+  text-align: left;
+  padding-top: 2rem;
+}
+.cid-rUrqKkkykh p {
+  margin-bottom: 0;
+  text-align: left;
+  padding-top: 1.5rem;
+  padding-top: 2rem;
+}
+.cid-rUrqKkkykh .mbr-section-btn {
+  padding-top: 2.5rem;
+}
+.cid-rUrqKkkykh .mbr-section-btn a {
+  margin: 0;
+}
+.cid-rUrqKkkykh .mbr-text {
+  color: #767676;
+}
+.cid-rUrqKkkykh .card-wrapper {
+  height: 100%;
+  background: #efefef;
+}
+.cid-rUrqKkkykh .card-wrapper .card-box {
+  padding: 0 2rem 2rem;
+}
+@media (max-width: 767px) {
+  .cid-rUrqKkkykh .card:not(.last-child) {
+    padding-bottom: 2rem;
+  }
+}
 .cid-rSRHV739Jm {
   padding-top: 0px;
   padding-bottom: 0px;
@@ -1461,6 +1502,78 @@ section.lazy-placeholder:after {
 }
 @media (max-width: 767px) {
   .cid-rSRHV739Jm .card:not(.last-child) {
+    padding-bottom: 2rem;
+  }
+}
+.cid-rUtvJP7vfl {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  background-color: #ffffff;
+}
+.cid-rUtvJP7vfl h4 {
+  font-weight: 500;
+  margin-bottom: 0;
+  text-align: left;
+  padding-top: 2rem;
+}
+.cid-rUtvJP7vfl p {
+  margin-bottom: 0;
+  text-align: left;
+  padding-top: 1.5rem;
+  padding-top: 2rem;
+}
+.cid-rUtvJP7vfl .mbr-section-btn {
+  padding-top: 2.5rem;
+}
+.cid-rUtvJP7vfl .mbr-section-btn a {
+  margin: 0;
+}
+.cid-rUtvJP7vfl .mbr-text {
+  color: #767676;
+}
+.cid-rUtvJP7vfl .card-wrapper {
+  height: 100%;
+  background: #efefef;
+}
+.cid-rUtvJP7vfl .card-wrapper .card-box {
+  padding: 0 2rem 2rem;
+}
+@media (max-width: 767px) {
+  .cid-rUtvJP7vfl .card:not(.last-child) {
+    padding-bottom: 2rem;
+  }
+}
+.cid-rUtIY9ibmq {
+  padding-top: 15px;
+  padding-bottom: 0px;
+  background-color: #ffffff;
+}
+.cid-rUtIY9ibmq h4 {
+  font-weight: 500;
+  margin-bottom: 0;
+  text-align: left;
+  padding-top: 2rem;
+}
+.cid-rUtIY9ibmq p {
+  margin-bottom: 0;
+  text-align: left;
+  padding-top: 1.5rem;
+  padding-top: 2rem;
+}
+.cid-rUtIY9ibmq .mbr-section-btn {
+  padding-top: 2.5rem;
+}
+.cid-rUtIY9ibmq .mbr-section-btn a {
+  margin: 0;
+}
+.cid-rUtIY9ibmq .mbr-text {
+  color: #767676;
+}
+.cid-rUtIY9ibmq .card-wrapper {
+  height: 100%;
+}
+@media (max-width: 767px) {
+  .cid-rUtIY9ibmq .card:not(.last-child) {
     padding-bottom: 2rem;
   }
 }
@@ -1695,6 +1808,44 @@ section.lazy-placeholder:after {
 }
 @media (max-width: 767px) {
   .cid-rUiqMWCnkj .card:not(.last-child) {
+    padding-bottom: 2rem;
+  }
+}
+.cid-rUtr5S7FF8 {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  background-color: #ffffff;
+}
+.cid-rUtr5S7FF8 h4 {
+  font-weight: 500;
+  margin-bottom: 0;
+  text-align: left;
+  padding-top: 2rem;
+}
+.cid-rUtr5S7FF8 p {
+  margin-bottom: 0;
+  text-align: left;
+  padding-top: 1.5rem;
+  padding-top: 2rem;
+}
+.cid-rUtr5S7FF8 .mbr-section-btn {
+  padding-top: 2.5rem;
+}
+.cid-rUtr5S7FF8 .mbr-section-btn a {
+  margin: 0;
+}
+.cid-rUtr5S7FF8 .mbr-text {
+  color: #767676;
+}
+.cid-rUtr5S7FF8 .card-wrapper {
+  height: 100%;
+  background: #efefef;
+}
+.cid-rUtr5S7FF8 .card-wrapper .card-box {
+  padding: 0 2rem 2rem;
+}
+@media (max-width: 767px) {
+  .cid-rUtr5S7FF8 .card:not(.last-child) {
     padding-bottom: 2rem;
   }
 }
@@ -2128,6 +2279,81 @@ section.lazy-placeholder:after {
   }
 }
 .cid-rUigQG8iwm .mbr-section-subtitle {
+  color: #0e50f4;
+}
+.cid-rUtpXyuCnZ {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  background-color: #ffffff;
+}
+.cid-rUtpXyuCnZ h4 {
+  font-weight: 500;
+  margin-bottom: 0;
+  text-align: left;
+  padding-top: 2rem;
+}
+.cid-rUtpXyuCnZ p {
+  margin-bottom: 0;
+  text-align: left;
+  padding-top: 1.5rem;
+  padding-top: 2rem;
+}
+.cid-rUtpXyuCnZ .mbr-section-btn {
+  padding-top: 2.5rem;
+}
+.cid-rUtpXyuCnZ .mbr-section-btn a {
+  margin: 0;
+}
+.cid-rUtpXyuCnZ .mbr-text {
+  color: #767676;
+}
+.cid-rUtpXyuCnZ .card-wrapper {
+  height: 100%;
+  background: #efefef;
+}
+.cid-rUtpXyuCnZ .card-wrapper .card-box {
+  padding: 0 2rem 2rem;
+}
+@media (max-width: 767px) {
+  .cid-rUtpXyuCnZ .card:not(.last-child) {
+    padding-bottom: 2rem;
+  }
+}
+.cid-rUrKnmZj3L {
+  padding-top: 15px;
+  padding-bottom: 0px;
+  background-color: #efefef;
+}
+.cid-rUrKnmZj3L h4 {
+  font-weight: 500;
+  margin-bottom: 0;
+  text-align: left;
+  padding-top: 2rem;
+}
+.cid-rUrKnmZj3L p {
+  margin-bottom: 0;
+  text-align: left;
+  padding-top: 1.5rem;
+  padding-top: 2rem;
+}
+.cid-rUrKnmZj3L .mbr-section-btn {
+  padding-top: 2.5rem;
+}
+.cid-rUrKnmZj3L .mbr-section-btn a {
+  margin: 0;
+}
+.cid-rUrKnmZj3L .mbr-text {
+  color: #767676;
+}
+.cid-rUrKnmZj3L .card-wrapper {
+  height: 100%;
+}
+@media (max-width: 767px) {
+  .cid-rUrKnmZj3L .card:not(.last-child) {
+    padding-bottom: 2rem;
+  }
+}
+.cid-rUrKnmZj3L .mbr-section-subtitle {
   color: #0e50f4;
 }
 .cid-rUiTzTaJoc {
